# Khoa_luan_SDB

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docs/: ARTIFACTS_MANIFEST.md  JOURNAL_REPRODUCIBILITY.md
reports/: backbone_finetune_controlled_experiments.md  clipshots_postprocess_cv.csv  clipshots_postprocess_cv.json  clipshots_postprocess_cv.md  deploy_regen_analysis_results.json  deploy_regen_analysis_summary.md  deploy_regen_clipshots_top_errors.csv  deploy_regen_coverage_report.json  deploy_regen_coverage_report.md  deploy_regen_coverage_shot_original_videos.json  deploy_regen_coverage_shot_original_videos.md  deploy_regen_coverage_shot_video_download.json  deploy_regen_coverage_shot_video_download.md  deploy_regen_coverage_shotdata_root.json  deploy_regen_coverage_shotdata_root.md  deploy_regen_per_video.csv  experiment_rerun_implementation_summary.md  experimental_results.json  experimental_results_summary.md  literature_results.json  paper_analysis_per_video.csv  paper_analysis_results.json  paper_analysis_summary.md  threshold_sweep_bbc_clipshots.csv  threshold_sweep_bbc_clipshots.json  threshold_sweep_bbc_clipshots.md
scripts/: analyze_paper_results.py  benchmark_journal_runtime.py  build_paper.ps1  build_thesis.ps1  clipshots_postprocess_cv.py  package_journal_artifacts.py  regenerate_deploy_study.py  run_journal_study.py  select_journal_protocol.py  sweep_dataset_thresholds.py  sync_experimental_results.py
tests/: conftest.py  test_ablation_runner.py  test_backbone_finetune.py  test_clipshots_postprocess_cv.py  test_common.py  test_experimental_results.py  test_journal_protocol.py  test_metrics_equivalence.py  test_paper_analysis.py  test_regenerate_deploy_study.py  test_run_journal_study.py  test_smoke.py  test_threshold_sweep.py  test_train_phase2_provenance.py  test_web_backend.py
tmp/: thesis_after_build.txt  thesis_current_text.txt  (+2 more)
(+101 files in other folders)
