[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autoshotv2"
version = "0.1.0"
description = "AutoShotV2: shot boundary detection (Phase2 head + post-process calibration)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "einops",
    "ffmpeg-python",
    "matplotlib",
]

[project.scripts]
autoshotv2-train = "autoshotv2.train_phase2:main"
autoshotv2-eval = "autoshotv2.eval:main"
autoshotv2-calibrate = "autoshotv2.postprocess_calibration:main"
autoshotv2-ablation = "autoshotv2.ablation:main"
autoshotv2-train-ema = "autoshotv2.train_ema:main"
autoshotv2-ema-report = "autoshotv2.ema_report:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "artifacts: needs local artifact bundle (checkpoints/cached logits/datasets); deselect with -m 'not artifacts'",
    "gpu: needs a CUDA device",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["publications", "data", "apps/web/frontend", "research"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E731", # lambda assignment — used intentionally in model code
    "UP008", # super(Class, self) — legacy TransNetV2 style, harmless
    "B905", # zip(strict=...) would change behavior on length mismatch; lengths match by construction
]

[tool.ruff.lint.per-file-ignores]
# Ported TransNetV2 supernet (upstream legacy code) — lint minimally.
"src/autoshotv2/model/*" = ["E711", "E741", "UP", "E501"]
# Tests legitimately mutate sys.path before importing the package under test.
"tests/*" = ["E402"]
"tests/test_web_backend.py" = ["E501"]
# FastAPI's File(...)/Form(...) defaults are the framework idiom.
"apps/web/backend/*" = ["B008"]
